# verl

./: .gitignore  Makefile  pyproject.toml  requirements.txt  setup.py
examples/sft/: train_qwen_openo1.sh
examples/sft/gsm8k/: run_gemma_2b.sh
scripts/: inference.py  vllm_generate.py
tests/e2e/: check_results.py
tests/e2e/envs/: __init__.py
tests/gpu_utility/: test_memory_buffers.py  test_torch_functional.py
tests/model/: test_transformer.py  test_transformers_ulysses.py
tests/ray/: test_driverfunc_to_worker.py  test_ray_local_envs.py  test_worker_group_torch.py
tests/ray/detached_worker/: server.py
tests/rollout/: run_fsdp_vllm.py  test_vllm_hf_loader.py
tests/sanity/: check_license.py
tests/utility/: test_tensor_dict_utilities.py
verl/: __init__.py  protocol.py
verl/models/: registry.py  weight_loader_registry.py
verl/models/transformers/: llama.py  monkey_patch.py
verl/single_controller/: __init__.py
verl/single_controller/base/: decorator.py  worker.py  worker_group.py
verl/single_controller/ray/: __init__.py  base.py  megatron.py
verl/trainer/: fsdp_sft_trainer.py  main_eval.py  main_generation.py  main_ppo.py
verl/trainer/config/: ppo_trainer.yaml  sft_trainer.yaml
verl/trainer/ppo/: core_algos.py  ray_trainer.py
verl/utils/: __init__.py  data_processor.py  distributed.py  fs.py  fsdp_utils.py  hdfs_io.py  import_utils.py  memory_buffer.py  model.py  tokenizer.py  torch_dtypes.py  torch_functional.py  tracking.py
verl/utils/dataset/: rl_dataset.py  rm_dataset.py  sft_dataset.py
verl/workers/: fsdp_workers.py
(+28 files in other folders)
